/**
 * SPDX-FileCopyrightText: (c) 2000 Liferay, Inc. https://liferay.com
 * SPDX-License-Identifier: LGPL-2.1-or-later OR LicenseRef-Liferay-DXP-EULA-2.0.0-2023-06
 */

import '@testing-library/jest-dom/extend-expect';
import {
	act,
	cleanup,
	fireEvent,
	render,
	waitForElement,
} from '@testing-library/react';
import {PageProvider} from 'dynamic-data-mapping-form-renderer';
import React from 'react';
import ReactDOM from 'react-dom';

import Select from '../../../src/main/resources/META-INF/resources/Select/Select.es';

const spritemap = 'icons.svg';

const createOptions = (length) => {
	const options = [];

	for (let counter = 1; counter <= length; counter++) {
		options.push({
			label: 'label' + counter,
			name: 'name' + counter,
			value: 'item' + counter,
		});
	}

	return options;
};
const SelectWithProvider = (props) => (
	<PageProvider value={{editingLanguageId: 'en_US'}}>
		<Select {...props} />
	</PageProvider>
);

describe('Select', () => {
	// eslint-disable-next-line no-console
	const originalWarn = console.warn;

	afterAll(() => {
		// eslint-disable-next-line no-console
		console.warn = originalWarn;
	});

	beforeAll(() => {
		// eslint-disable-next-line no-console
		console.warn = (...args) => {
			if (/DataProvider: Trying/.test(args[0])) {
				return;
			}
			originalWarn.call(console, ...args);
		};

		ReactDOM.createPortal = jest.fn((element) => {
			return element;
		});
	});

	afterEach(cleanup);

	beforeEach(() => {
		jest.useFakeTimers();
		fetch.mockResponse(JSON.stringify({}));
	});

	it('does not render and empty option', () => {
		const option = {
			checked: false,
			disabled: false,
			id: 'id',
			inline: false,
			label: 'label',
			name: 'name',
			showLabel: true,
			value: 'item',
		};

		const {container} = render(
			<SelectWithProvider
				options={[option]}
				showEmptyOption={false}
				spritemap={spritemap}
			/>
		);

		const dropDownItem = container.querySelector(
			'.dropdown-menu .dropdown-item'
		);

		expect(dropDownItem.innerHTML).toBe(option.label);
	});

	it('does not show an empty option when the search input is available', async () => {
		const handleFieldEdited = jest.fn();

		const {container} = render(
			<SelectWithProvider
				dataSourceType="manual"
				multiple={false}
				onChange={handleFieldEdited}
				options={createOptions(12)}
				showEmptyOption={false}
				spritemap={spritemap}
			/>
		);

		const dropdownTrigger = container.querySelector(
			'.form-builder-select-field.input-group-container'
		);

		fireEvent.click(dropdownTrigger);

		const emptyOption = container.querySelector('[label=choose-an-option]');

		expect(emptyOption).toBeNull();
	});

	it('is not editable', () => {
		render(<SelectWithProvider readOnly spritemap={spritemap} />);

		act(() => {
			jest.runAllTimers();
		});

		const dropdownTrigger = document.body.querySelector(
			'.select-field-trigger'
		);

		expect(dropdownTrigger).toHaveClass('disabled');
	});

	it('has a help text', () => {
		const {container} = render(
			<SelectWithProvider spritemap={spritemap} tip="Type something" />
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('has an id', () => {
		const {container} = render(
			<SelectWithProvider id="Id" spritemap={spritemap} />
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('renders an empty option', () => {
		const {container} = render(
			<SelectWithProvider
				options={[
					{
						checked: false,
						disabled: false,
						id: 'id',
						inline: false,
						label: 'label',
						name: 'name',
						showLabel: true,
						value: 'item',
					},
				]}
				showEmptyOption={true}
				spritemap={spritemap}
			/>
		);

		const dropDownItem = container.querySelector(
			'.dropdown-menu .dropdown-item'
		);

		expect(dropDownItem.innerHTML).toBe('choose-an-option');
	});

	it('renders options', () => {
		const {container} = render(
			<SelectWithProvider
				options={[
					{
						checked: false,
						disabled: false,
						id: 'id',
						inline: false,
						label: 'label',
						name: 'name',
						showLabel: true,
						value: 'item',
					},
				]}
				spritemap={spritemap}
			/>
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('renders no options when options come empty', () => {
		const {container} = render(
			<SelectWithProvider options={[]} spritemap={spritemap} />
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('has a label', () => {
		const {container} = render(
			<SelectWithProvider label="label" spritemap={spritemap} />
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('is closed by default', () => {
		const {container} = render(
			<SelectWithProvider open={false} spritemap={spritemap} />
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it("has class dropdown-opened when it's opened", () => {
		const {container} = render(
			<SelectWithProvider open spritemap={spritemap} />
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('has a placeholder', () => {
		const {container} = render(
			<SelectWithProvider
				placeholder="Placeholder"
				spritemap={spritemap}
			/>
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('has a predefinedValue', () => {
		const {container} = render(
			<SelectWithProvider
				predefinedValue={['Select']}
				spritemap={spritemap}
			/>
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('is not required', () => {
		const {container} = render(
			<SelectWithProvider required={false} spritemap={spritemap} />
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('puts an asterisk when field is required', () => {
		const {container} = render(
			<SelectWithProvider
				label="This is the label"
				required
				spritemap={spritemap}
			/>
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('renders Label if showLabel is true', () => {
		const {container} = render(
			<SelectWithProvider label="text" showLabel spritemap={spritemap} />
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('has a value', () => {
		const {container} = render(
			<SelectWithProvider spritemap={spritemap} value={['value']} />
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('has a key', () => {
		const {container} = render(
			<SelectWithProvider key="key" spritemap={spritemap} />
		);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('calls onChange callback when an item is selected', async () => {
		const handleFieldEdited = jest.fn();

		const {container, getByTestId} = render(
			<SelectWithProvider
				dataSourceType="manual"
				onChange={handleFieldEdited}
				options={createOptions(2)}
				spritemap={spritemap}
			/>
		);

		act(() => {
			jest.runAllTimers();
		});

		const dropdownTrigger = container.querySelector(
			'.form-builder-select-field.input-group-container'
		);

		fireEvent.click(dropdownTrigger);

		act(() => {
			jest.runAllTimers();
		});

		const dropdownItem = await waitForElement(() =>
			getByTestId('dropdownItem-0')
		);

		fireEvent.click(dropdownItem);

		act(() => {
			jest.runAllTimers();
		});

		expect(handleFieldEdited).toHaveBeenCalled();
	});

	it('calls onChange callback when an item is selected using multiselect', async () => {
		const handleFieldEdited = jest.fn();

		const {container, getByTestId} = render(
			<SelectWithProvider
				dataSourceType="manual"
				multiple={true}
				onChange={handleFieldEdited}
				options={createOptions(7)}
				spritemap={spritemap}
			/>
		);

		const dropdownTrigger = container.querySelector(
			'.form-builder-select-field.input-group-container'
		);

		fireEvent.click(dropdownTrigger);

		act(() => {
			jest.runAllTimers();
		});

		const labelItem = await waitForElement(() =>
			getByTestId('labelItem-item7')
		);

		fireEvent.click(labelItem);

		act(() => {
			jest.runAllTimers();
		});

		expect(handleFieldEdited).toHaveBeenCalledWith(expect.any(Object), [
			'item7',
		]);
		expect(container).toMatchSnapshot();
	});

	it('shows an empty option when the search input is available', async () => {
		const handleFieldEdited = jest.fn();

		const {container} = render(
			<SelectWithProvider
				dataSourceType="manual"
				multiple={false}
				onChange={handleFieldEdited}
				options={createOptions(12)}
				showEmptyOption={true}
				spritemap={spritemap}
			/>
		);

		const dropdownTrigger = container.querySelector(
			'.form-builder-select-field.input-group-container'
		);

		fireEvent.click(dropdownTrigger);

		const emptyOption = container.querySelector('[label=choose-an-option]');

		expect(emptyOption).not.toBeNull();
	});

	it('shows a search input when the number of options is more than the maximum allowed', async () => {
		const handleFieldEdited = jest.fn();

		const {container} = render(
			<SelectWithProvider
				dataSourceType="manual"
				multiple={true}
				onChange={handleFieldEdited}
				options={createOptions(12)}
				spritemap={spritemap}
			/>
		);

		const dropdownTrigger = container.querySelector(
			'.form-builder-select-field.input-group-container'
		);

		fireEvent.click(dropdownTrigger);

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();
	});

	it('filters according to the input and calls onChange callback when an item is selected using search', async () => {
		const handleFieldEdited = jest.fn();

		const {container, getByTestId} = render(
			<SelectWithProvider
				dataSourceType="manual"
				multiple={true}
				onChange={handleFieldEdited}
				options={createOptions(12)}
				spritemap={spritemap}
			/>
		);

		const dropdownTrigger = container.querySelector(
			'.form-builder-select-field.input-group-container'
		);

		fireEvent.click(dropdownTrigger);

		act(() => {
			jest.runAllTimers();
		});

		const input = container.querySelector('input');

		fireEvent.change(input, {
			target: {
				value: 'label1',
			},
		});

		act(() => {
			jest.runAllTimers();
		});

		expect(container).toMatchSnapshot();

		const labelItem = await waitForElement(() =>
			getByTestId('labelItem-item11')
		);

		fireEvent.click(labelItem);

		act(() => {
			jest.runAllTimers();
		});

		expect(handleFieldEdited).toHaveBeenCalledWith(expect.any(Object), [
			'item11',
		]);
	});

	it('shows the options value if there are values', async () => {
		const handleFieldEdited = jest.fn();

		render(
			<SelectWithProvider
				dataSourceType="manual"
				multiple={true}
				onChange={handleFieldEdited}
				options={createOptions(12)}
				predefinedValue={['item1', 'item2']}
				spritemap={spritemap}
				value={['item3']}
			/>
		);

		expect(
			document.querySelector('span[value="item1"]')
		).not.toBeInTheDocument();
		expect(
			document.querySelector('span[value="item2"]')
		).not.toBeInTheDocument();
		expect(
			document.querySelector('span[value="item3"]')
		).toBeInTheDocument();
	});

	it('shows the predefinedValues if there is no value', async () => {
		const handleFieldEdited = jest.fn();

		render(
			<SelectWithProvider
				dataSourceType="manual"
				multiple={true}
				onChange={handleFieldEdited}
				options={createOptions(12)}
				predefinedValue={['item1', 'item2']}
				spritemap={spritemap}
				value={[]}
			/>
		);

		expect(
			document.querySelector('span[value="item1"]')
		).toBeInTheDocument();
		expect(
			document.querySelector('span[value="item2"]')
		).toBeInTheDocument();
	});

	it('clear all values if the user has edited the field to clear the predefinedValue', async () => {
		const handleFieldEdited = jest.fn();

		render(
			<SelectWithProvider
				dataSourceType="manual"
				localizedValueEdited={{en_US: true}}
				multiple={true}
				onChange={handleFieldEdited}
				options={createOptions(12)}
				predefinedValue={['item1', 'item2']}
				spritemap={spritemap}
				value={[]}
			/>
		);

		expect(
			document.querySelector('span[value="item1"]')
		).not.toBeInTheDocument();
		expect(
			document.querySelector('span[value="item2"]')
		).not.toBeInTheDocument();
	});
});
